fixed: no wrap

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -220,8 +220,9 @@ $nav-width: 200px;
     & > table {
       margin: 1em;
 
-      td {
+      & > tbody > tr > td:nth-of-type(2n+1) {
         vertical-align: top;
+        width: 6em;
       }
     }
 
